--- a/lms/src/main/resources/application.yml
+++ b/lms/src/main/resources/application.yml
@@ -14,3 +14,11 @@ spring:
     password: psswd
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+
+#
+#  activemq:
+#    broker-url: tcp://172.17.0.2:61616
+#    user: admin
+#    password: admin
+
+
